자기소개서 추가

--- a/plan/index.html
+++ b/plan/index.html
@@ -16,7 +16,8 @@
       repo: '',   
     search : [
       '/',            // => /README.md
-      '/guide',       // => /guide.md 
+      '/book',       // => /book.md 
+      '/about',       // => /about.md 
     ],
       // logo: './img/icon.svg'
     }
