--- a/404.html
+++ b/404.html
@@ -5,6 +5,6 @@ description: Not Found
 permalink: /404.html
 ---
 <div style="text-align:center;">
-    <h1>404 Not Found</h1>
+    <h1>404 Not Found</h1>test
     <img src="/assets/images/404.png" alt="404 not found image"/>
 </div>
