--- a/index.html
+++ b/index.html
@@ -11,15 +11,10 @@
     <meta name="Resource-type" content="Document">
     <meta name="robots" content="ALL">
     <title>Hongchul Ju | Portfolio</title>
-    <script src="https://kit.fontawesome.com/cbe76240f6.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="./main.css">
+    <script src="https://kit.fontawesome.com/cbe76240f6.js" crossorigin="anonymous"></script> 
     <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:300,400|Open+Sans" rel="stylesheet">
-    <script>
-        function scrollaa(element) {
-            console.log(element)
-            document.getElementById(element).scrollIntoView();
-        }
-    </script>
+    <link rel="stylesheet" href="./main.css">
+    <script src="./main.js"></script>
 </head>
 
 <body>
@@ -30,7 +25,7 @@
                 <li><a href="#projects">Projects</a></li>
                 <li><a href="#about">About</a></li>
                 <li><a href="#Tech">Tech</a></li>
-                <li><a href="#awards">awards</a></li>
+                <li><a href="#awards">Awards</a></li>
                 <li><a href="https://jhc9639.blog.me">Blog</a></li>
                 <li><a href="https://github.com/wnghdcjfe" target="_blank" class="no-link"><i
                             class="fab fa-github"></i></a></li>
@@ -49,84 +44,50 @@
         </p>
     </div>
     <ul class="projects" data-anchor="projects" id="projects">
-        <li class="project project-fullpage ripple load-bg">
-            <div class="project-actions">
-                <a href="#fullpage" class="project-link icon-link no-link"></a>
-                <div class="project-close-info icon-cancel icon-cancel"></div>
-                <div class="project-info">i</div>
-            </div>
+        <li class="project project-1 ripple load-bg"> 
             <div class="project-image"></div>
-            <a href="#fullpage" class="project-content ">
+            <a href="https://github.com/wnghdcjfe/wnghdcjfe.github.io/blob/master/%EA%B8%B0%EC%83%81%EC%A0%95%EB%B3%B4%EC%A7%80%EC%9B%90%EC%B2%B4%EA%B3%84.md" class="project-content"target="_blank">
                 <h3 class="project-title"><span>AMOS</span></h3>
                 <span class="project-underline"></span>
                 <div class="project-description"><span>Real-time Weather Monitoring System</span></div>
             </a>
         </li>
-        <li class="project project-pagepiling ripple load-bg">
-            <div class="project-actions">
-                <a href="#pagepiling" class="project-link icon-link no-link"></a>
-                <div class="project-close-info icon-cancel"></div>
-                <div class="project-info">i</div>
-            </div>
+        <li class="project project-2 ripple load-bg">  
 
             <div class="project-image"></div>
-            <a href="#pagepiling" class="project-content">
+            <a href="https://github.com/wnghdcjfe/IUtoon" class="project-content"target="_blank">
                 <h3 class="project-title"><span>IU toon</span></h3>
                 <span class="project-underline"></span>
                 <div class="project-description"><span>Singer IU Song Serving Page</span></div>
             </a>
         </li>
-        <li class="project project-multiscroll ripple load-bg">
-            <div class="project-actions">
-                <a href="#multiscroll" class="project-link icon-link no-link"></a>
-                <div class="project-close-info icon-cancel"></div>
-                <div class="project-info">i</div>
-            </div>
-
+        <li class="project project-3 ripple load-bg">  
             <div class="project-image"></div>
-            <a href="#multiscroll" class="project-content">
+            <a href="https://github.com/wnghdcjfe/wnghdcjfe.github.io/blob/master/knue.md" class="project-content"target="_blank">
                 <h3 class="project-title"><span>KNUE</span></h3>
                 <span class="project-underline"></span>
                 <div class="project-description"><span>university community web site</span></div>
             </a>
         </li>
-        <li class="project project-funnytext ripple load-bg">
-            <div class="project-actions">
-                <a href="#funnytext" class="project-link icon-link no-link"></a>
-                <div class="project-close-info icon-cancel"></div>
-                <div class="project-info">i</div>
-            </div>
-
+        <li class="project project-4 ripple load-bg"> 
             <div class="project-image"></div>
-            <a href="#funnytext" class="project-content">
+            <a href="https://lucidcode.herokuapp.com/#/" class="project-content" target="_blank">
                 <h3 class="project-title"><span>Lucid Codeforce</span></h3>
                 <span class="project-underline"></span>
                 <div class="project-description"><span>A system that quickly finds answers to Codeforce.</span></div>
             </a>
         </li>
-        <li class="project project-validpic ripple load-bg">
-            <div class="project-actions">
-                <a href="#validpic" class="project-link icon-link no-link"></a>
-                <div class="project-close-info icon-cancel"></div>
-                <div class="project-info">i</div>
-            </div>
-
+        <li class="project project-5 ripple load-bg"> 
             <div class="project-image"></div>
-            <a href="#validpic" class="project-content">
+            <a href="https://github.com/mochajs/mocha/graphs/contributors" class="project-content"target="_blank">
                 <h3 class="project-title"><span>Mocha.js</span></h3>
                 <span class="project-underline"></span>
                 <div class="project-description"><span>Javascript Test Framework</span></div>
             </a>
         </li>
-        <li class="project project-websites ripple load-bg">
-            <div class="project-actions">
-                <a href="#websites" class="project-link icon-link no-link"></a>
-                <div class="project-close-info icon-cancel"></div>
-                <div class="project-info">i</div>
-            </div>
-
+        <li class="project project-6 ripple load-bg"> 
             <div class="project-image"></div>
-            <a href="#websites" class="project-content">
+            <a href="https://github.com/wnghdcjfe/thousand_wooo_app" class="project-content"target="_blank">
                 <h3 class="project-title"><span>Solbang Notepad</span></h3>
                 <span class="project-underline"></span>
                 <div class="project-description"><span>Actor Chun Woo-hee's Notebook Page</span></div>
@@ -134,23 +95,23 @@
         </li>
     </ul>
     <div class="about" data-anchor="about" id="about">
-        <div class="text-wrap animate-text come-in">
+        <div class="text-wrap animate-text ">
             <h2>About<span class="logo-end">_</span></h2>
             <p class="text-intro">
                 I started programming by developing a university community, and I joined the Air Force and developed a
                 project to provide weather data services. One of the most representative projects is the AMOS project
-                currently used by the airport control department.
-
+                currently used by the airport control department. 
+            </p>
                 <p class="text-intro">
                     Based on the experience of solving more than 1,300 algorithmic problems in BOJ, I have experienced
                     over 67% improvement in performance by using segments and a 15-fold increase in data growth, but 30%
-                    improvement by eliminating unnecessary business logic and requests. </p>
+                    improvement by removing unnecessary business logic and requests. </p>
 
         </div>
     </div>
 
     <div class="Tech" data-anchor="Tech" id="Tech">
-        <div class="text-wrap animate-text come-in">
+        <div class="text-wrap animate-text ">
             <h2>Tech<span class="logo-end">_</span></h2>
             <p class="text-intro">Strong</p>
             <p>
@@ -161,39 +122,38 @@
                 Programming / MongoDB / Neo4j / Nginx</p>
             <p class="text-intro">Knowledgeable</p>
             <p>
-                jQuery / Angular.js / PHP / Python / TensorFlow /
-                DL(LSTM, CNN) / matplotlib / Numpy / Pandas /
-                Beautiful Soup 4 / Selenium / Spring / Java / JSP /
+                Spring / Java / jQuery / Angular.js / PHP / Python / TensorFlow /
+                DL(LSTM, CNN) / Matplotlib / Numpy / Pandas /
+                Beautiful Soup 4 / Selenium / JSP /
                 MySQL / TiberoDB / FirebaseDB
             </p>
             <p class="text-intro">ETC</p>
             <p>
-                Git / Docker / IOT / OPIC-IM2(20.02.29)/ secure
-                coding(KISA)
+                Git / Docker / IOT / OPIC-IM2(20.02.29) / Secure Coding Completion(KISA)
             </p>
         </div>
     </div>
     <div class="awards" data-anchor="awards" id="awards">
-        <div class="text-wrap animate-text come-in">
+        <div class="text-wrap animate-text ">
             <h2>Awards<span class="logo-end">_</span></h2>
             <p class="text-intro"> 2020 Kakao Development Challenge Front-End Challenges</p>
             <p> 20.07 / Top 4% / Programmers / <a href="https://bit.ly/2C96qdc">link</a></p>
             <p class="text-intro"> 2019 Countributon – Mocha.js</p>
             <p> 19.12.04 / Encouragement Prize / Ministry of Science and ICT</p>
-            <p class="text-intro"> Defense Department's citation (related to the development of artillery weather
-                sources)</p>
-            <p> 19.04.11 / Minister of Defense Intelligence <i class="fas fa-star"></i><i class="fas fa-star"></i><i
-                    class="fas fa-star"></i> / Army (Defense Department)</p>
-            <p class="text-intro">Air Force Meteorological Group citation (related to AMOS development)</p>
-            <p> 18.08.20 / General <i class="fas fa-star"></i> / Air Force Weather Group</p>
-            <p class="text-intro"> Second place in SW camp development competition for military Service in South Korea
+            <p class="text-intro"> citation (development of North Korean Artillery Weather Station)</p> 
+            <p> 19.04.11 / defense Intelligence Headquarters <i class="fas fa-star"></i><i class="fas fa-star"></i><i
+                    class="fas fa-star"></i> / Defense Department</p>
+
+            <p class="text-intro">citation (development of AMOS)</p>
+            <p> 18.08.20 / Brigadier General <i class="fas fa-star"></i> / Weather Group of R.O.K Air Force</p>
+            <p class="text-intro"> 2nd place in SW development competition for military in South Korea
             </p>
-            <p> 17.01.24 / IOT Chief of Staff Award <i class="fas fa-star"></i><i class="fas fa-star"></i><i
+            <p> 17.01.24 / General <i class="fas fa-star"></i><i class="fas fa-star"></i><i
                     class="fas fa-star"></i><i class="fas fa-star"></i> / Defense Department</p>
-            <p class="text-intro"> Startup Korea Gangwon Hackathon Development Competition #1</p>
-            <p> 15.12 13/ 1st place / Gangwon Center for Creative Economy & Innovation</p>
-            <p class="text-intro"> Second place in the 2015 Korea Presentation Contest</p>
-            <p> 15.01.29 / 2nd place in university student category / HighOne Resort</p>
+            <p class="text-intro"> 1st place in Startup Korea Gangwon Hackathon</p>
+            <p> 15.12 13/ 1st place / Gangwon Creative Economy Innovation Center</p>
+            <p class="text-intro"> 2nd place in the 2015 Korea Presentation Contest</p>
+            <p> 15.01.29 / 2nd place in university student category / G1 Gangwon</p>
         </div>
     </div>
 
