--- a/aviss/index.html
+++ b/aviss/index.html
@@ -12,15 +12,12 @@
     <link rel="icon" href="./favicon.ico" />
     <link rel="shortcut icon" href="./favicon.ico" />
     <title>어비스를 소개합니다.</title>
-    <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:300,400|Open+Sans" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100&display=swap" rel="stylesheet">
     <style>
-        @font-face {
-            font-family: "윤";
-            src: url("./윤고딕320.woff2");
-        }
-
         * {
-            font-family: "윤";
+            font-family: 'Noto Sans KR', sans-serif;
         }
 
         nav img {
