--- a/aviss/index.html
+++ b/aviss/index.html
@@ -60,7 +60,7 @@
         </p>
 
         <p>
-            3. 일주일 또는 2주일에 한번 시간을 정해 노래하고 춤추고 맛있는 것을 먹는 재밌는 회식을 합니다.
+            3. 스타트업에서 친밀감은 중요합니다. 한달에 한번 시간을 정해 맛집을 가서 회식합니다.  
         </p>
 
         <p>
