--- a/aviss/index.html
+++ b/aviss/index.html
@@ -33,74 +33,120 @@
             max-width: 618px;
             margin: 0 auto;
         }
+
+        body {
+            padding: 0;
+            margin: 0; 
+        }
+
+        video {
+            z-index: -1;
+            position: fixed;
+            top: 0;
+            left: 0;
+            min-width: 100%;
+            min-height: 100vh;
+            width: auto;
+            height: auto;
+        }
+ 
+body::-webkit-scrollbar {
+    display: none;
+}
+ 
+body {
+  -ms-overflow-style: none;   
+  scrollbar-width: none;  
+}
+
+        * {
+            color: white;
+        }
+        .text-center{
+            text-align: center;
+        }
+        .text-center > img{
+            width: 300px; 
+        }
+        .wrap_outer{
+            padding-top:150px;
+        }
     </style>
 </head>
 
 <body>
-    <nav>
-        <img src="logo-min.png" alt="">
-    </nav>
-    <article>
-        <h3>소개</h3>
-        <p>
-            안녕하세요. 국내 최고의 차세대 AI 투자분석 서비스를 만드는 팀, 어비스입니다.
-        </p>
-        <h3>제공하는 서비스</h3>
-        <p>
-            1. AI투자분석서비스 및 모니터링 서비스, 어비스
-        </p>
+    <div id="app">
+        <video id="mobile_video" playsinline="" autoplay="autoplay" loop="loop" muted="muted">
+            <source src="https://s3.ap-northeast-2.amazonaws.com/alphasquare-s3/media/AP_640_360.mp4" type="video/mp4">
+        </video>
+        <div id="mq_mobile" style="background-color: rgba(18, 18, 18, 0.5);">
+            <article class="wrap_outer">
+                <div class="wrap text-center">
+                    <img src="./logo-white.png" alt="">   
+                    <div class="Title">For Better Investment</div>
+                    <div class="Contents less_weak">
+                        <p>어비스는 AI 핀테크회사로서 투자자들의 더 나은 투자환경을 위해 끊임없는 혁신을 추구합니다</p> 
+                    </div>
+                </div>
+            </article>
+            <article class="wrap_outer"> 
+                <h3>제공하는 서비스</h3>
+                <p>
+                    1. AI투자분석서비스 및 모니터링 서비스, 어비스
+                </p>
 
-        <h3>문화</h3>
-        <p>
-            1. 님으로된 호칭을 가집니다.
-        </p>
+                <h3>문화</h3>
+                <p>
+                    1. 님으로된 호칭을 가집니다.
+                </p>
 
-        <p>
-            2. 매일 한번 미팅을 합니다. 하루에 어떤 일을 할지 의논하고 잡담을 나누는 시간을 갖습니다.
-        </p>
+                <p>
+                    2. 매일 한번 미팅을 합니다. 하루에 어떤 일을 할지 의논하고 잡담을 나누는 시간을 갖습니다.
+                </p>
 
-        <p>
-            3. 스타트업에서 친밀감은 중요합니다. 한달에 한번 시간을 정해 맛집을 가서 회식합니다.  
-        </p>
+                <p>
+                    3. 스타트업에서 친밀감은 중요합니다. 한달에 한번 시간을 정해 맛집을 가서 회식합니다.
+                </p>
 
-        <p>
-            4. 6월과 8월에 강원도 고성워크숍을 갑니다. 하고 싶은 공부를 하거나 자유로이 수영을 하고 놉니다.
-        </p>
-        <p>
-            5. S급 코드와 S급 인재를 지향합니다.
-        </p>
-        <p>
-            6. 한달에 한 번 서로가 하고 싶은 세미나를 발표하는 문화를 갖습니다. 잘한 경우 투표로 10만원 상금을 갖습니다.
-        </p>
-        <p>
-            7. 보고하거나 설득할 것이 있다면 PT가 아닌 어비스 워드양식을 기반으로 준비해 소통합니다.
-        </p>
-        <p>
-            8. 신뢰하고 충돌함을 즐깁니다. 서로를 배려하며 열띤 토론을 나눕니다.
-        </p>
-        <h3>혜택</h3>
-        <p>
-            1. 원하는 도서, 논문 구매비 지원 / 점심, 석식비 지원
-        </p>
-        <p>
-            2. 자유로운 휴가 / 유연한 출퇴근
-        </p>
-        <p>
-            3. 시디즈의자, 최고급 개인 장비 지급
-        </p>
-        <p>
-            4. 지분 및 스톡옵션
-        </p>
+                <p>
+                    4. 6월과 8월에 강원도 고성워크숍을 갑니다. 하고 싶은 공부를 하거나 자유로이 수영을 하고 놉니다.
+                </p>
+                <p>
+                    5. S급 코드와 S급 인재를 지향합니다.
+                </p>
+                <p>
+                    6. 한달에 한 번 서로가 하고 싶은 세미나를 발표하는 문화를 갖습니다. 잘한 경우 투표로 10만원 상금을 갖습니다.
+                </p>
+                <p>
+                    7. 보고하거나 설득할 것이 있다면 PT가 아닌 어비스 워드양식을 기반으로 준비해 소통합니다.
+                </p>
+                <p>
+                    8. 신뢰하고 충돌함을 즐깁니다. 서로를 배려하며 열띤 토론을 나눕니다.
+                </p>
+                <h3>혜택</h3>
+                <p>
+                    1. 원하는 도서, 논문 구매비 지원 / 점심, 석식비 지원
+                </p>
+                <p>
+                    2. 자유로운 휴가 / 유연한 출퇴근
+                </p>
+                <p>
+                    3. 시디즈의자, 최고급 개인 장비 지급
+                </p>
+                <p>
+                    4. 지분 및 스톡옵션
+                </p>
 
-        <h3>오시는 길</h3>
-        <p>
-            <a href="http://naver.me/5Amf43n3"> [서울 해냄센터 7호]</a>
-        </p>
-        <h3>문의</h3>
-        <p>
-            jhc9639@naver.com
-        </p>
-    </article>
+                <h3>오시는 길</h3>
+                <p>
+                    <a href="http://naver.me/5Amf43n3"> [서울 해냄센터 7호]</a>
+                </p>
+                <h3>문의</h3>
+                <p>
+                    jhc9639@naver.com
+                </p>
+            </article>
+        </div> 
 </body>
 
 </html>
