--- a/aviss/index.html
+++ b/aviss/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ko">
 
-<head>
+<head> 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="어비스">
@@ -12,6 +12,12 @@
     <link rel="icon" href="./favicon.ico" />
     <link rel="shortcut icon" href="./favicon.ico" />
     <title>어비스를 소개합니다.</title>
+    <meta property="og:locale" content="ko_KR">
+    <meta property="og:image" content="./logo.png">
+    <meta property="og:type" content="website">
+    <meta property="og:site_name" content="어비스">
+    
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100&display=swap" rel="stylesheet">
