--- a/aviss/index.html
+++ b/aviss/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="ko">
 
-<head> 
+<head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="어비스">
-    <meta name="description" content="팀 어비스의 홈페이지입니다.">
+    <meta name="description" content="어비스는 AI 핀테크회사로서 투자자들의 더 나은 투자환경을 위해 끊임없는 혁신을 추구합니다">
     <meta name="keywords" content="team quantumuse">
     <meta name="Resource-type" content="Document">
     <meta name="robots" content="ALL">
@@ -13,10 +13,10 @@
     <link rel="shortcut icon" href="./favicon.ico" />
     <title>어비스를 소개합니다.</title>
     <meta property="og:locale" content="ko_KR">
-    <meta property="og:image" content="./logo.png">
+    <meta property="og:image" content="https://wnghdcjfe.github.io/aviss/logo.png">
     <meta property="og:type" content="website">
     <meta property="og:site_name" content="어비스">
-    
+
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -42,7 +42,7 @@
 
         body {
             padding: 0;
-            margin: 0; 
+            margin: 0;
         }
 
         video {
@@ -55,27 +55,32 @@
             width: auto;
             height: auto;
         }
- 
-body::-webkit-scrollbar {
-    display: none;
-}
- 
-body {
-  -ms-overflow-style: none;   
-  scrollbar-width: none;  
-}
+
+        body::-webkit-scrollbar {
+            display: none;
+        }
+
+        body {
+            -ms-overflow-style: none;
+            scrollbar-width: none;
+        }
 
         * {
             color: white;
         }
-        .text-center{
+
+        .text-center {
             text-align: center;
         }
-        .text-center > img{
-            width: 300px; 
+
+        .text-center>img {
+            width: 300px;
         }
-        .wrap_outer{
-            padding-top:150px;
+
+        .wrap_outer {
+            padding-top: 150px;
+            padding-left: 10px;
+            padding-right: 10px; 
         }
     </style>
 </head>
@@ -88,14 +93,14 @@ body {
         <div id="mq_mobile" style="background-color: rgba(18, 18, 18, 0.5);">
             <article class="wrap_outer">
                 <div class="wrap text-center">
-                    <img src="./logo-white.png" alt="">   
+                    <img src="./logo-white.png" alt="">
                     <div class="Title">For Better Investment</div>
                     <div class="Contents less_weak">
-                        <p>어비스는 AI 핀테크회사로서 투자자들의 더 나은 투자환경을 위해 끊임없는 혁신을 추구합니다</p> 
+                        <p>어비스는 AI 핀테크회사로서 투자자들의 더 나은 투자환경을 위해 끊임없는 혁신을 추구합니다</p>
                     </div>
                 </div>
             </article>
-            <article class="wrap_outer"> 
+            <article class="wrap_outer">
                 <h3>제공하는 서비스</h3>
                 <p>
                     1. AI투자분석서비스 및 모니터링 서비스, 어비스
@@ -121,7 +126,7 @@ body {
                     5. S급 코드와 S급 인재를 지향합니다.
                 </p>
                 <p>
-                    6. 한달에 한 번 서로가 하고 싶은 세미나를 발표하는 문화를 갖습니다. 잘한 경우 투표로 10만원 상금을 갖습니다.
+                    6. 한달에 한 번 서로가 하고 싶은 세미나를 발표하며 잘한 사람을 뽑아 상금을 줍니다.  
                 </p>
                 <p>
                     7. 보고하거나 설득할 것이 있다면 PT가 아닌 어비스 워드양식을 기반으로 준비해 소통합니다.
@@ -131,13 +136,13 @@ body {
                 </p>
                 <h3>혜택</h3>
                 <p>
-                    1. 원하는 도서, 논문 구매비 지원 / 점심, 석식비 지원
+                    1. 원하는 도서와 논문 구매비 지원 / 점심비과 석식비 지원
                 </p>
                 <p>
                     2. 자유로운 휴가 / 유연한 출퇴근
                 </p>
                 <p>
-                    3. 시디즈의자, 최고급 개인 장비 지급
+                    3. 시디즈의자 및 최고급 개인 장비 지급
                 </p>
                 <p>
                     4. 지분 및 스톡옵션
@@ -145,14 +150,14 @@ body {
 
                 <h3>오시는 길</h3>
                 <p>
-                    <a href="http://naver.me/5Amf43n3"> [서울 해냄센터 7호]</a>
+                    <a href="http://naver.me/5Amf43n3"> [서울시 강동구 해냄센터 7호]</a>
                 </p>
                 <h3>문의</h3>
                 <p>
                     jhc9639@naver.com
                 </p>
             </article>
-        </div> 
+        </div>
 </body>
 
 </html>
