--- a/aviss/index.html
+++ b/aviss/index.html
@@ -56,6 +56,14 @@
             height: auto;
         }
 
+        h3 {
+            margin-bottom: 0;
+        }
+
+        p {
+            margin-top: 0;
+        }
+
         body::-webkit-scrollbar {
             display: none;
         }
@@ -63,6 +71,7 @@
         body {
             -ms-overflow-style: none;
             scrollbar-width: none;
+            height: 100vh;
         }
 
         * {
@@ -80,7 +89,8 @@
         .wrap_outer {
             padding-top: 150px;
             padding-left: 10px;
-            padding-right: 10px; 
+            padding-right: 10px;
+            padding-bottom: 20px;
         }
     </style>
 </head>
@@ -126,7 +136,7 @@
                     5. S급 코드와 S급 인재를 지향합니다.
                 </p>
                 <p>
-                    6. 한달에 한 번 서로가 하고 싶은 세미나를 발표하며 잘한 사람을 뽑아 상금을 줍니다.  
+                    6. 한달에 한 번 서로가 하고 싶은 세미나를 발표하며 잘한 사람을 뽑아 상금을 줍니다.
                 </p>
                 <p>
                     7. 보고하거나 설득할 것이 있다면 PT가 아닌 어비스 워드양식을 기반으로 준비해 소통합니다.
