--- a/aviss/index.html
+++ b/aviss/index.html
@@ -13,11 +13,9 @@
     <link rel="shortcut icon" href="./favicon.ico" />
     <title>어비스를 소개합니다.</title>
     <meta property="og:locale" content="ko_KR">
-    <meta property="og:image" content="https://wnghdcjfe.github.io/aviss/logo.png">
+    <meta property="og:image" content="https://wnghdcjfe.github.io/aviss/og-image.png">
     <meta property="og:type" content="website">
     <meta property="og:site_name" content="어비스">
-
-
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100&display=swap" rel="stylesheet">
