--- a/aviss/index.html
+++ b/aviss/index.html
@@ -98,7 +98,7 @@
         <video id="mobile_video" playsinline="" autoplay="autoplay" loop="loop" muted="muted">
             <source src="https://s3.ap-northeast-2.amazonaws.com/alphasquare-s3/media/AP_640_360.mp4" type="video/mp4">
         </video>
-        <div id="mq_mobile" style="background-color: rgba(18, 18, 18, 0.5);">
+        <div id="mq_mobile" style="background-color: rgba(18, 18, 18, 0.7);">
             <article class="wrap_outer">
                 <div class="wrap text-center">
                     <img src="./logo-white.png" alt="">
@@ -158,12 +158,14 @@
 
                 <h3>오시는 길</h3>
                 <p>
-                    <a href="http://naver.me/5Amf43n3"> [서울시 강동구 해냄센터 7호]</a>
-                </p>
-                <h3>문의</h3>
+                    <a href="http://naver.me/5Amf43n3"target="_blank"> [서울시 강동구 해냄센터 7호]</a>
+                </p> 
+                 
+                <h3>대표프로필</h3>
+                
                 <p>
-                    jhc9639@naver.com
-                </p>
+                    <a href="http://naver.me/5Amf43n3" target="_blank"> [서울시 강동구 해냄센터 7호]</a>
+                </p> 
             </article>
         </div>
 </body>
