--- a/aviss/index.html
+++ b/aviss/index.html
@@ -161,10 +161,10 @@
                     <a href="http://naver.me/5Amf43n3"target="_blank"> [서울시 강동구 해냄센터 7호]</a>
                 </p> 
                  
-                <h3>대표프로필</h3>
+                <h3>주홍철 대표 프로필</h3>
                 
                 <p>
-                    <a href="http://naver.me/5Amf43n3" target="_blank"> [서울시 강동구 해냄센터 7호]</a>
+                    <a href="https://blog.naver.com/jhc9639/222633934401" target="_blank"> [링크]</a>
                 </p> 
             </article>
         </div>
