--- a/aviss/index.html
+++ b/aviss/index.html
@@ -53,7 +53,8 @@
             width: auto;
             height: auto;
         }
-        a{
+
+        a {
             text-decoration: none;
         }
 
@@ -92,6 +93,13 @@
             padding-left: 10px;
             padding-right: 10px;
             padding-bottom: 20px;
+        }
+
+        h5 {
+            font-size: 10px;
+            font-weight: lighter;
+            text-align: center;
+            margin: 0 auto;
         }
     </style>
 </head>
@@ -137,13 +145,13 @@
                     5. S급 코드와 S급 인재를 지향합니다.
                 </p>
                 <p>
-                    6. 한달에 한 번 하고 싶은 발표를 합니다. 
-                </p> 
-                <p>
-                    7. 신뢰하고 충돌합니다.  
+                    6. 한달에 한 번 하고 싶은 발표를 합니다.
                 </p>
                 <p>
-                    8. 좋은 아이디어를 제시하거나, 버그를 찾아낼때마다 기프티콘을 줍니다.  
+                    7. 신뢰하고 충돌합니다.
+                </p>
+                <p>
+                    8. 좋은 아이디어를 제시하거나, 버그를 찾아낼때마다 기프티콘을 줍니다.
                 </p>
                 <h3>혜택</h3>
                 <p>
@@ -161,10 +169,11 @@
 
                 <h3>오시는 길</h3>
                 <p>
-                    <a href="http://naver.me/5Amf43n3"target="_blank"> [서울시 강동구 해냄센터 7호]</a>
-                </p> 
-                  
-                <h3>사업자 등록번호 : 161-27-01242 / <a href="https://blog.naver.com/jhc9639/222633934401" target="_blank">[대표 프로필]</a></h3> 
+                    <a href="http://naver.me/5Amf43n3" target="_blank"> [서울시 강동구 해냄센터 7호]</a>
+                </p>
+
+                <h5>사업자 등록번호 : 161-27-01242 [응용 소프트웨어 개발 및 공급업]</h5>
+                <h5><a href="https://blog.naver.com/jhc9639/222633934401" target="_blank">[대표 프로필]</a></h5>
             </article>
         </div>
 </body>
