--- a/aviss/index.html
+++ b/aviss/index.html
@@ -159,14 +159,17 @@
             </article>
             <article class="wrap_outer">
                 <div class="tile">
-                    <h3>제공하는 서비스</h3>
+                    <h3>여러분들은 어떻게 투자를 하시나요?</h3>
                     <p>
-                        인공지능 기반으로 주식, 원자재, 가상화폐 종목에 대한 모니터링과 추천 그리고 분석서비스를 제공합니다.   
-                        어비스의 기준을 기반으로 안전하면서도 유동성이 확보된 종목들을 대상을 제공해 보다 리스크를 낮추고 수익성을 증가시킬 수 있는 방법을 제안합니다.  
-                    </p> 
-                    <p class="imgrap">
-                        <img src="./net-monitor-animation_mobile03.gif" alt="">
-                    </p>
+                        종목 투자에 있어 중요한 것은 종목에 관련된 이슈대응인데 잘 대응하고 계신가요?  
+                    </p>  
+                </div> 
+                
+                <div class="tile">
+                    <h3>여러분들은 어떻게 투자를 하시나요?</h3>
+                    <p>
+                        종목 투자에 있어 중요한 것은 종목에 관련된 이슈대응인데 잘 대응하고 계신가요?  
+                    </p>  
                 </div> 
 
                 <div class="tile">
