--- a/aviss/index.html
+++ b/aviss/index.html
@@ -46,6 +46,9 @@
       margin: 0 auto;
       padding: 5vw;
     }
+    .title h2{
+      font-size: 1.2rem;
+    }
 
     body {
       padding: 0;
@@ -142,8 +145,8 @@
     <article>
       <div class="title">
         <img src="./logo-white.png" alt="" class="logo">
-        <h2>똑똑한 인공지능 비서, AVISS</h2>
-        <p>어비스 필터링알고리즘을 기반으로 산출된 종목을 대상으로 이슈가 발생했을 때 가장 빠르게 분석리포트를 제공해주는 서비스를 개발 중입니다.</p>
+        <h2>똑똑한 인공지능 비서, 어비스픽</h2>
+        <p>어비스는 특허출원한 필터링알고리즘을 기반으로 수익성과 안정성이 보장된 종목을 산출합니다. 그리고 그 종목을 대상으로 이슈가 발생했을 때 5분이내 인공지능기반 분석리포트를 제공해주며 모니터링, 추천까지 해주는 서비스입니다. </p>
 
 
         <a href="https://forms.gle/fAKqbwJVhC1gcHfM8" target="_blank" class="notice">알림신청</a>
