--- a/aviss/index.html
+++ b/aviss/index.html
@@ -45,6 +45,7 @@
       max-width: 1000px;
       margin: 0 auto;
       padding: 5vw;
+      padding-bottom: 3vw;
     }
     .title h2{
       font-size: 1.2rem;
