--- a/aviss/index.html
+++ b/aviss/index.html
@@ -21,6 +21,11 @@
   <link href="https://fonts.gstatic.com/s/poppins/v20/pxiByp8kv8JHgFVrLEj6Z1xlFQ.woff2" rel="stylesheet">
   <style>
     @font-face {
+      font-family: 나눔스퀘어네오;
+      src: url(./assets/fonts/NanumSquareNeoTTF-aLt.woff2);
+    }
+
+    @font-face {
       font-family: 'GmarketSansMedium';
       src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2001@1.1/GmarketSansMedium.woff') format('woff');
       font-weight: normal;
@@ -44,11 +49,13 @@
     .title {
       max-width: 1000px;
       margin: 0 auto;
-      padding: 5vw;
-      padding-bottom: 3vw;
+      padding: 3vw;
+      padding-bottom: 5vw;
     }
-    .title h2{
+
+    .title h2 {
       font-size: 1.2rem;
+      margin-bottom: 0;
     }
 
     body {
@@ -65,7 +72,8 @@
     .title p {
       margin: 0;
       font-weight: lighter;
-      margin-bottom: 7vw;
+      margin-bottom: 1vw;
+      text-align: left;
     }
 
     video {
@@ -106,7 +114,7 @@
       text-align: left;
       max-width: 400px;
       margin: 0 auto;
-      padding:2vw;
+      padding: 2vw; 
     }
 
     .info img {
@@ -119,6 +127,11 @@
     .info p {
       margin: 3px;
       font-size: 16px;
+      font-family: 나눔스퀘어네오;
+    }
+
+    .info a {
+      font-family: 나눔스퀘어네오;
     }
 
     .info h3 {
@@ -147,7 +160,8 @@
       <div class="title">
         <img src="./logo-white.png" alt="" class="logo">
         <h2>똑똑한 인공지능 비서, 어비스픽</h2>
-        <p>어비스는 특허출원한 필터링알고리즘을 기반으로 수익성과 안정성이 보장된 종목을 산출합니다. 그리고 그 종목을 대상으로 이슈가 발생했을 때 5분이내 인공지능기반 분석리포트를 제공해주며 모니터링, 추천까지 해주는 서비스입니다. </p>
+        <p>어비스는 특허출원한 필터링알고리즘을 기반으로 수익성과 안정성이 보장된 종목을 산출합니다. 그리고 그 종목을 대상으로 이슈가 발생했을 때 5분이내 인공지능기반 분석리포트를 제공해주며 모니터링,
+          추천까지 해주는 서비스입니다. </p>
 
 
         <a href="https://forms.gle/fAKqbwJVhC1gcHfM8" target="_blank" class="notice">알림신청</a>
@@ -162,7 +176,7 @@
           <a href="http://www.yes24.com/Product/Goods/108887922" target="_blank">CS지식노트</a>
           <a href="http://www.yes24.com/Product/Goods/104208010" target="_blank">MEVN</a>
         </p>
-        <p> - 기술유투버 
+        <p> - 기술유투버
           <a href="https://www.youtube.com/@kundol" target="_blank">큰돌의 터전</a> </p>
 
       </div>
