--- a/aviss/index.html
+++ b/aviss/index.html
@@ -56,12 +56,12 @@
     .title h2 {
       font-size: 1.2rem;
       margin-bottom: 0;
-    }
+    } 
 
     body {
       padding: 0;
       margin: 0;
-      overflow: hidden;
+      overflow-x: hidden;
     }
 
     a {
@@ -69,12 +69,13 @@
       color: #FFC93C;
     }
 
-    .title p {
-      margin: 0;
+    .title p { 
+      font-family: 나눔스퀘어네오;
       font-weight: lighter;
-      margin-bottom: 1vw;
-      text-align: left;
+      margin-bottom: 1vw; 
+      margin: 0 auto; 
     }
+
 
     video {
       z-index: -1;
@@ -87,10 +88,12 @@
       height: auto;
     }
 
-    h1,
-    h2,
+    h1, 
     h3 {
       margin: 2rem;
+    }
+    h2{
+      margin : 0 auto;
     }
 
     .logo {
@@ -106,15 +109,15 @@
       text-decoration: none;
       display: inline-block;
       font-size: 16px;
+      margin-top: 12px;
     }
 
     .info {
-      font-size: 10px;
-      font-weight: lighter;
-      text-align: left;
-      max-width: 400px;
-      margin: 0 auto;
-      padding: 2vw; 
+      text-align: left; 
+      margin: 0 auto; 
+      bottom: 25px;
+      position: fixed; 
+      left: calc(50% - 122.29px);
     }
 
     .info img {
@@ -148,6 +151,9 @@
       text-align: center;
       width: 100%;
     }
+    .btt{
+      font-size: 12px;
+    }
   </style>
 </head>
 
@@ -159,24 +165,27 @@
     <article>
       <div class="title">
         <img src="./logo-white.png" alt="" class="logo">
-        <h2>똑똑한 인공지능 비서, 어비스픽</h2>
-        <p>어비스는 특허출원한 필터링알고리즘을 기반으로 수익성과 안정성이 보장된 종목을 산출합니다. 그리고 그 종목을 대상으로 이슈가 발생했을 때 5분이내 인공지능기반 분석리포트를 제공해주며 모니터링,
-          추천까지 해주는 서비스입니다. </p>
-
-
-        <a href="https://forms.gle/fAKqbwJVhC1gcHfM8" target="_blank" class="notice">알림신청</a>
+        <p>현명한 투자를 위한 후회 없는 선택</p> 
+        <h2>똑똑한 AI투자비서, 어비스</h2>
+        <p class="btt">[23 하반기 출시예정]</p> 
+        <a href="https://forms.gle/fAKqbwJVhC1gcHfM8" target="_blank" class="notice">알림 신청</a> 
+ 
       </div>
       <div class="info">
         <img src="./assets/프로필.png" alt="">
         <h3>대표 : 주홍철</h3>
-        <p> - 전직 네이버 개발자</p>
-        <p> - 오픈소스 Mocha.js contributor</p>
-        <p> - 필터링 알고리즘 2개 특허 출원</p>
-        <p> - IT 베스트셀러 2권의 저자 :
-          <a href="http://www.yes24.com/Product/Goods/108887922" target="_blank">CS지식노트</a>
-          <a href="http://www.yes24.com/Product/Goods/104208010" target="_blank">MEVN</a>
+        <p> - 전) 네이버 개발자</p>
+        <p> - 오픈소스 Mocha.js contributor</p>  
+        <p>  
+          - 강의 : <a href="https://www.inflearn.com/users/@kundol" target="_blank"> 인프런(알고리즘, CS)</a> 
         </p>
-        <p> - 기술유투버
+        <p>  
+          - 저서 : <a href="http://www.yes24.com/Product/Goods/108887922" target="_blank"> CS전공지식노트 / 2022</a> 
+        </p>
+        <p>  
+          - 저서 :<a href="http://www.yes24.com/Product/Goods/104208010" target="_blank">  MEVN / 2021</a> 
+        </p> 
+        <p> - 유투브 :
           <a href="https://www.youtube.com/@kundol" target="_blank">큰돌의 터전</a> </p>
 
       </div>
