--- a/aviss/index.html
+++ b/aviss/index.html
@@ -47,7 +47,7 @@
     }
 
     .title {
-      max-width: 1000px;
+      max-width: 600px;
       margin: 0 auto;
       padding: 3vw;
       padding-bottom: 5vw;
@@ -152,6 +152,8 @@
       width: 100%;
     }
     .btt{
+      margin-top:5px !important; 
+      color: #aaa; 
       font-size: 12px;
     }
   </style>
@@ -164,10 +166,10 @@
     </video>
     <article>
       <div class="title">
-        <img src="./logo-white.png" alt="" class="logo">
-        <p>현명한 투자를 위한 후회 없는 선택</p> 
+        <img src="./logo-white.png" alt="" class="logo"> 
         <h2>똑똑한 AI투자비서, 어비스</h2>
-        <p class="btt">[23 하반기 출시예정]</p> 
+        <p>어비스는 특허출원한 알고리즘을 기반으로 필터링된 주식, 가상화폐 등 종목에 관한 이슈 모니터링 및 AI 분석리포트를 5분이내에 받을 수 있는 서비스입니다.</p> 
+        <p class="btt">[23.10 출시예정]</p> 
         <a href="https://forms.gle/fAKqbwJVhC1gcHfM8" target="_blank" class="notice">알림 신청</a> 
  
       </div>
@@ -177,17 +179,14 @@
         <p> - 전) 네이버 개발자</p>
         <p> - 오픈소스 Mocha.js contributor</p>  
         <p>  
-          - 강의 : <a href="https://www.inflearn.com/users/@kundol" target="_blank"> 인프런(알고리즘, CS)</a> 
+          - 강의 : <a href="https://www.inflearn.com/users/@kundol" target="_blank"> 알고리즘 / 인프런</a> 
         </p>
         <p>  
-          - 저서 : <a href="http://www.yes24.com/Product/Goods/108887922" target="_blank"> CS전공지식노트 / 2022</a> 
+          - 저서 : <a href="http://www.yes24.com/Product/Goods/108887922" target="_blank"> CS전공지식노트[길벗] / 2022</a> 
         </p>
         <p>  
-          - 저서 :<a href="http://www.yes24.com/Product/Goods/104208010" target="_blank">  MEVN / 2021</a> 
-        </p> 
-        <p> - 유투브 :
-          <a href="https://www.youtube.com/@kundol" target="_blank">큰돌의 터전</a> </p>
-
+          - 저서 :<a href="http://www.yes24.com/Product/Goods/104208010" target="_blank">  MEVN[BJ퍼블릭] / 2021</a> 
+        </p>  
       </div>
       <p class="bt"> 161-27-01242 / 업태 : 정보통신업 / 종목 : 응용 소프트웨어 개발 및 공급업</p>
     </article>
