--- a/aviss/index.html
+++ b/aviss/index.html
@@ -199,15 +199,15 @@
       <h1>빠르고 좋은 정보를.</h1>
       <p>
         어비스는 쉬운 투자를 꿈꿉니다.
-        이슈가 발생했을 때 지금 내 관심종목을 팔아야 할지, 사야 할지를 알려주며 이슈에 대해 가장 빠르고 가장 정확하게 알려주는 AI리포트를 제공합니다.
+        이슈가 발생했을 때 지금 내 관심종목을 팔아야 할지, 사야 할지를 알려주는 가장 빠른 AI분석리포트를 제공합니다.
       </p>
       <p>
-        어비스는 특허출원한 필터링 알고리즘을 기반으로 우수한 종목들을 고릅니다.
-        이러한 우수한 종목들을 기반으로 모니터링시스템과 분석시스템을 통해 어떠한 이슈가 발생했을 때 5분안에 이슈 관련, 종목관련 리포트를 빠르게 제공해서
+        어비스는 먼저 특허출원한 필터링 알고리즘을 기반으로 우수한 종목들을 고릅니다.
+        이러한 우수한 종목들을 기반으로 모니터링시스템과 분석시스템을 통해 어떠한 이슈가 발생했을 때 5분안에 이슈, 종목관련 리포트를 빠르게 제공해서
         투자자가 빠른 대응을 할 수 있게 만듭니다.
       </p>
       <p>
-        어비스는 2022년 회사 설립 이후로 특허출원 2개, 상표권 등록 2개, 예비창업패키지 최우수기업선정, 수익률 40% 달성 등 많은 성과를 이뤄내고 있습니다.
+        어비스는 2022년 회사 설립 이후로 특허출원 2개, 상표권 등록 2개, 예비창업패키지 최우수기업선정, 하락장일 때 3달 내 수익률 40% 달성 등 많은 성과를 이뤄내고 있습니다.
       </p>
     </div>
     <div id="culture">
@@ -224,21 +224,22 @@
       </div>
       <div>
         <h3>책임감있고 자유롭게</h3>
-        <p>자신이 맡은 일에 대해 책임감있게 일하되 자유롭게 의견을 제시하고 자유롭게 휴가를 가며 자신이 원하는 시간에 근무를 합니다. 100% 재택근무는 당연합니다.(필요시 오프라인)
-        </p>
+        <p>자신이 맡은 일에 대해 책임감있게 일하며 자유롭게 원하는 환경에서 일합니다. 6 - 12에서 선택적으로 출근시간을 정할 수 있으며 이에 따라 15 - 21 사이에서 선택적으로 퇴근 시간을 
+          정할 수 있으며 매주 금요일에는 4시간만 일하면 됩니다. 또한 100% 재택근무로 원하는 환경에서 근무할 수 있습니다. 다만 필요시에는 오프라인 근무를 하게 됩니다.  
+        </p> 
       </div>
 
       <div>
         <h3>지원하고 지원하는</h3>
         <p>
-          국내1위 의자인 시디즈의자와 개발에 필요한 맥북, 개발에 필요한 도서, 온라인 강의교육비까지 개발에 필요한 전부를 제공합니다.
+          국내1위 의자인 시디즈의자와 개발에 필요한 맥북, 개발에 필요한 도서, 온라인 강의교육비까지 개발에 필요한 전부를 제공하며 점심 식대비로 2만5천원을 지원합니다.
         </p>
       </div>
 
       <div>
-        <h3>이익을 공유하는</h3>
+        <h3>공유하고 함께가는</h3>
         <p>
-          매출의 일부를 인센티브로 제공하며 성과에 따라 스톡옵션 또한 제공합니다.
+          매출의 일부를 인센티브로 제공하며 성과에 따라 스톡옵션 또한 제공해서 회사와 팀원이 하나과 되어 함께가는 것을 목표로 합니다.
         </p>
       </div>
     </div>
@@ -247,11 +248,11 @@
       <img src="./assets/프로필.png" alt="" class="repre">
       <h3>상위1%의 개발자</h3>
       <p>
-        전)네이버 개발자이자 오픈소스개발자(Mocha), 국내 알고리즘 상위 0.1%, 여러 개발대회 수상을 했으며 
+        전)네이버 개발자이자 오픈소스개발자(Mocha), 국내 알고리즘 상위 0.1% 등 여러 개발대회 수상을 했으며 
          국내IT베스트셀러 "면접을 위한 CS전공지식노트"를 집필하기도 했습니다. 
       </p>   
       <p> 
-        이러한 저의 실력을 바탕으로 완벽한 사용자경험을 보여주는 서비스를 만들어 나가겠습니다.  
+        이러한 저의 실력과 경험을 바탕으로 완벽한 서비스를 만들어 나가겠습니다.  
       </p>   
     </div>
 
